--- a/app/src/main/res/layout/admin_activity_beranda.xml
+++ b/app/src/main/res/layout/admin_activity_beranda.xml
@@ -102,12 +102,12 @@
                         android:scaleType="fitXY"/>
 
                     <ImageView
-                        android:id="@+id/harianBeranda"
+                        android:id="@+id/custBeranda"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_margin="3dp"
-                        android:src="@drawable/img_bukuharian"
+                        android:src="@drawable/img_customer"
                         android:scaleType="fitXY"/>
                 </LinearLayout>
 
@@ -115,6 +115,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/harianBeranda"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="3dp"
+                        android:src="@drawable/img_bukuharian"
+                        android:scaleType="fitXY"/>
+
                     <ImageView
                         android:id="@+id/spBeranda"
                         android:layout_width="0dp"
@@ -123,7 +132,12 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_monitorsp"
                         android:scaleType="fitXY"/>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/fblBeranda"
                         android:layout_width="0dp"
@@ -132,12 +146,7 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_fbl"
                         android:scaleType="fitXY"/>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/returBeranda"
                         android:layout_width="0dp"
@@ -146,7 +155,12 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_retur"
                         android:scaleType="fitXY"/>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/salesBeranda"
                         android:layout_width="0dp"
@@ -155,12 +169,7 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_monitorsales"
                         android:scaleType="fitXY"/>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/omzetBeranda"
                         android:layout_width="0dp"
@@ -169,7 +178,12 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_omzet"
                         android:scaleType="fitXY"/>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/produkBeranda"
                         android:layout_width="0dp"
@@ -178,35 +192,30 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_surveyproduk"
                         android:scaleType="fitXY"/>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
                     <ImageView
-                        android:id="@+id/custBeranda"
+                        android:id="@+id/surveyBeranda"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_margin="3dp"
                         android:src="@drawable/img_surveycust"
                         android:scaleType="fitXY"/>
-
-                    <ImageView
-                        android:id="@+id/galeriBeranda"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_margin="3dp"
-                        android:src="@drawable/img_galery"
-                        android:scaleType="fitXY"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/galeryBeranda"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="3dp"
+                        android:src="@drawable/img_galery"
+                        android:scaleType="fitXY"/>
+
                     <ImageView
                         android:id="@+id/masukanBeranda"
                         android:layout_width="0dp"
@@ -215,7 +224,12 @@
                         android:layout_margin="3dp"
                         android:src="@drawable/img_masukan"
                         android:scaleType="fitXY"/>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/logoutBeranda"
                         android:layout_width="0dp"
@@ -223,6 +237,13 @@
                         android:layout_weight="1"
                         android:layout_margin="3dp"
                         android:src="@drawable/img_logout"
+                        android:scaleType="fitXY"/>
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="3dp"
                         android:scaleType="fitXY"/>
                 </LinearLayout>
             </LinearLayout>
