--- a/app/src/main/res/layout/staff_activity_absensi_list.xml
+++ b/app/src/main/res/layout/staff_activity_absensi_list.xml
@@ -6,37 +6,37 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".view.admin.customer.ActivityCustomer">
+    tools:context=".view.staff.absensi.ActivityAbsensiList">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarCust1"
+        android:id="@+id/toolbarList1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:visibility="gone">
         <RelativeLayout
-            android:id="@+id/laybarCust11"
+            android:id="@+id/laybarList11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="15dp"
             android:minHeight="?attr/actionBarSize"
             android:elevation="5dp">
             <LinearLayout
-                android:id="@+id/laybarCust12"
+                android:id="@+id/laybarList12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:orientation="horizontal">
                 <ImageView
-                    android:id="@+id/batalCust"
+                    android:id="@+id/batalList"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="5dp"
                     android:src="@drawable/ic_batal"/>
 
                 <ImageView
-                    android:id="@+id/lanjutCust"
+                    android:id="@+id/lanjutList"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/ic_lanjut"/>
@@ -45,26 +45,26 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/laybarCust12"
-                android:layout_toRightOf="@+id/backCust1"
+                android:layout_toLeftOf="@+id/laybarList12"
+                android:layout_toRightOf="@+id/backList1"
                 android:layout_marginBottom="20dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/dec_border">
-                <EditText
-                    android:id="@+id/namaCust"
+                <TextView
+                    android:id="@+id/tglList"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
                     android:layout_marginHorizontal="10dp"
                     android:background="@color/colorRed"
-                    android:hint="Nama Produk"
+                    android:hint="Tanggal Absensi"
                     android:textColor="@android:color/black"
                     android:textSize="15dp" />
             </RelativeLayout>
 
             <ImageView
-                android:id="@+id/backCust1"
+                android:id="@+id/backList1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
@@ -74,7 +74,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarCust2"
+        android:id="@+id/toolbarList2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -84,7 +84,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/backCust2"
+                android:id="@+id/backList2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
@@ -92,21 +92,60 @@
                 android:src="@drawable/ic_kembali"/>
 
             <TextView
-                android:id="@+id/laybarCust2"
+                android:id="@+id/laybarList2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:layout_gravity="center_vertical"
-                android:text="Master Customer"
+                android:text="Daftar Absensi"
                 android:textSize="20dp"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:id="@+id/laybarList3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/menungguList"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:text="MENUNGGU"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/setujuList"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="DISETUJUI"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/tolakList"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@color/colorPrimary"
+            android:text="DITOLAK"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerCust"
+        android:id="@+id/recyclerList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/list_customer"/>
+        tools:listitem="@layout/list_absensi"/>
 </LinearLayout>
