--- a/app/src/main/res/layout/sales_activity_omzet.xml
+++ b/app/src/main/res/layout/sales_activity_omzet.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".view.admin.omzet.ActivityOmzet">
+    tools:context=".view.sales.omzet.ActivityOmzet">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarOmzet"
         android:layout_width="match_parent"
