--- a/app/src/main/res/layout/staff_activity_sp.xml
+++ b/app/src/main/res/layout/staff_activity_sp.xml
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Nomor Order"
-                        android:inputType="textCapCharacters"
+                        android:inputType="number"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
                         android:textStyle="bold" />
@@ -140,10 +140,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Nama Customer"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -173,10 +173,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Alamat"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -206,10 +206,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Tanggal Invoice"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -272,6 +272,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Keterangan"
+                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
                         android:textStyle="bold" />
