--- a/app/src/main/res/layout/admin_activity_sp_detail.xml
+++ b/app/src/main/res/layout/admin_activity_sp_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".view.staff.sp.ActivitySpDetail">
+    tools:context=".view.admin.sp.ActivitySpDetail">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarDetail"
         android:layout_width="match_parent"
@@ -329,7 +329,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:hint="Masukkan Tgl Pengiriman"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
                         android:textStyle="bold"
@@ -362,11 +361,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:hint="Masukkan Nama Ekspedisi"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -395,11 +393,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:hint="Masukkan Nomor Resi"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -422,130 +419,6 @@
                         android:textColor="@color/colorGrey"
                         android:textSize="15dp"
                         android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:id="@+id/layRadionota"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/notaPutih1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorGrey"
-                                android:text="Nota Putih"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/notaPutih2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorAccent"
-                                android:text="Nota Putih"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"
-                                android:visibility="gone"/>
-
-                            <TextView
-                                android:id="@+id/notaPink1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorGrey"
-                                android:text="Nota Pink"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/notaPink2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorAccent"
-                                android:text="Nota Pink"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"
-                                android:visibility="gone"/>
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/notaKuning1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorGrey"
-                                android:text="Nota Kuning"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/notaKuning2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorAccent"
-                                android:text="Nota Kuning"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"
-                                android:visibility="gone"/>
-
-                            <TextView
-                                android:id="@+id/notaHijau1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorGrey"
-                                android:text="Nota Hijau"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/notaHijau2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:layout_margin="3dp"
-                                android:padding="5dp"
-                                android:background="@color/colorAccent"
-                                android:text="Nota Hijau"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold"
-                                android:visibility="gone"/>
-                        </LinearLayout>
-                    </LinearLayout>
 
                     <EditText
                         android:id="@+id/notaDetail"
@@ -616,11 +489,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:hint="Masukkan Keterangan"
-                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:editable="false"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -721,41 +593,4 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/layBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/btnBatal"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/dec_button"
-            android:backgroundTint="@color/colorPrimary"
-            android:gravity="center"
-            android:text="DIBATALKAN"
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/btnSimpan"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/dec_button"
-            android:backgroundTint="@color/colorAccent"
-            android:gravity="center"
-            android:text="SIMPAN DATA"
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-    </LinearLayout>
 </RelativeLayout>
