--- a/app/src/main/res/layout/admin_activity_sp_list.xml
+++ b/app/src/main/res/layout/admin_activity_sp_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".view.staff.sp.ActivitySpList">
+    tools:context=".view.admin.sp.ActivitySpList">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarList1"
         android:layout_width="match_parent"
@@ -94,16 +94,10 @@
                 android:layout_centerVertical="true"
                 android:orientation="horizontal">
                 <ImageView
-                    android:id="@+id/tambahList"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:src="@drawable/ic_tambah"/>
-
-                <ImageView
                     android:id="@+id/cariList"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_cari"/>
             </LinearLayout>
 
